namespace Contract.Constants;

public enum AccountMethod
{
    Phone,
    Email,
    Username,
    Google
}

public enum OTPMethod
{
    Resend,
    ForgotPassword,
    UpdateIdentifier,
    AdminAccountCreated
}