@startuml ClassDiagram
!include doc/SDS/CommonClassDiagram/ResultAndError.plantuml
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 50
skinparam ranksep 50
hide circle

class BaseApiController {
    #_sender: ISender
    #_httpContextAccessor: HttpContextAccessor
}

class AccountController {
    +CheckUpdateIdentifier(method: string, dto: VerifyUpdateIdentifierDTO): async Task<IActionResult>
}

class CheckUpdateIdentifierOTPQuery {
    +Id: Guid
    +Identifier: string
    +OTP: string
    +Method: AccountMethod 
}

class CheckUpdateIdentifierOTPQueryHandler {
    -_userManager: UserManager<ApplicationAccount> 
    +CheckUpdateIdentifierOTPQueryHandler(userManager: UserManager<ApplicationAccount>)
    +Handle(request: CheckUpdateIdentifierOTPQuery, cancellationToken: CancellationToken): async Task<Result>
}

class AccountError {
    {static} +NotFound: Error
    {static} +InvalidAccountMethod: Error
    {static} +InvalidOTP: Error
    {static} +OTPExpired: Error
}

enum AccountMethod {
    Phone
    Email
    Username
    Google
}

class VerifyUpdateIdentifierDTO {
    OTP: string
    Identifier: string
}

!include doc/SDS/CommonClassDiagram/Account/AccountDbContext.plantuml 
remove IDisposable
remove DbSet<T>
remove IdentityUserLogin<T>
remove IDbContext
remove DbContext
remove IApplicationDbContext
remove ApplicationDbContext
remove IdentityDbContext<ApplicationAccount>

' =========== Library class ===========
interface "IRequest<TResponse>" #black;line:white;text:white
interface "IRequestHandler<TRequest, TResponse>" #black;line:white;text:white
class "UserManager<TUser>" #black;line:white;text:white
' =========== Library class ===========

AccountController --|> BaseApiController
AccountController "1" -- "1" CheckUpdateIdentifierOTPQuery
AccountController "1" -- "1" VerifyUpdateIdentifierDTO
CheckUpdateIdentifierOTPQuery "1" o-- "1" AccountMethod
CheckUpdateIdentifierOTPQuery ..|> "IRequest<TResponse>"

CheckUpdateIdentifierOTPQueryHandler ..|> "IRequestHandler<TRequest, TResponse>"
CheckUpdateIdentifierOTPQueryHandler "1" -- "1" CheckUpdateIdentifierOTPQuery
CheckUpdateIdentifierOTPQueryHandler "1" o-- "1" "UserManager<TUser>"

CheckUpdateIdentifierOTPQueryHandler "1" ---"1..*" ApplicationAccount
CheckUpdateIdentifierOTPQueryHandler "1" -- "1..*" Result
CheckUpdateIdentifierOTPQueryHandler "1" -- "1..*" AccountError

Error "1..*" --o "1" AccountError

@enduml